force-app/main/default/objects/order_line_items__c/order_line_items__c.object-meta.xml
<CustomObject>
    <label>order line items</label>
    <nameField>
        <displayFormat>oli-{0000}</displayFormat>
        <label>order line items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>order line items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>