force-app/main/default/objects/order_line_items__c/fields/Garment__c.field-meta.xml
<CustomField>
    <fullName>Garment__c</fullName>
    <label>Garment</label>
    <referenceTo>Garment__c</referenceTo>
    <relationshipLabel>order line items</relationshipLabel>
    <relationshipName>order_line_items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>