force-app/main/default/objects/order_line_items__c/fields/image__c.field-meta.xml
<CustomField>
    <fullName>image__c</fullName>
    <formula>IMAGE( Garment__r.url__c , &quot;alternate_text&quot;,250,250)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>image</label>
    <type>Text</type>
</CustomField>