force-app/main/default/objects/order_line_items__c/fields/orderrel__c.field-meta.xml
<CustomField>
    <fullName>orderrel__c</fullName>
    <label>orderrel</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>order line items</relationshipLabel>
    <relationshipName>order_line_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>