force-app/main/default/objects/order_line_items__c/fields/size__c.field-meta.xml
<CustomField>
    <fullName>size__c</fullName>
    <defaultValue>&apos;medium&apos;</defaultValue>
    <label>size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>small</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>