force-app/main/default/objects/order_line_items__c/fields/total_price__c.field-meta.xml
<CustomField>
    <fullName>total_price__c</fullName>
    <formula>Garment__r.price__c *quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>total price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>